<resources>
    <string name="app_name">我的云音乐</string>
    <string name="loading">加载中...</string>
    <string name="phone_login">手机号登陆</string>
    <string name="register">注 册</string>
    <string name="login">登 陆</string>
    <string name="phone_register">手机号注册</string>
    <string name="enter_phone_number">请输入手机号</string>

    <string name="hint_phone">请输入手机号</string>
    <string name="hint_error_phone">手机号格式错误</string>
    <string name="hint_error_password_format">密码格式错误</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_error_password">密码错误</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">搜索</string>
    <string name="action_send">发送</string>
    <string name="action_share">分享</string>
    <string name="settings">设置</string>
    <string name="logout">退出登陆</string>
    <string name="default_time">00:00</string>
    <string name="default_name">默认</string>
    <string name="only_text">纯文本</string>
    <string name="play_all">播放全部</string>
    <string name="music_count">共%1$d首</string>
    <string name="music_count1">（%1$d）</string>
    <string name="collection_all">+收藏歌单</string>
    <string name="cancel_collection_all">-取消收藏</string>
    <string name="list_loop">列表循环</string>
    <string name="one_list_loop">单曲循环</string>
    <string name="random_list_loop">随机循环</string>
    <string name="select_topic">请选择一个话题</string>
    <string name="select_lyric">选择歌词</string>
    <string name="select_friend">请选择一个好友</string>
    <string name="share_lyric_hint">请选中要分享的歌词！</string>
    <string name="share">分享</string>
    <string name="lyric_image">歌词图片</string>
    <string name="song_count">%1$d首</string>
    <string name="local_music">本地音乐</string>
    <string name="scan_local_music">扫描本地音乐</string>
    <string name="select_sort">选择排序方式</string>
    <string name="start_scan">开始扫描</string>
    <string name="stop_scan">停止扫描</string>
    <string name="go_my_music">回到我的音乐</string>
    <string name="find_music_count">找到（%1$d）首音乐</string>
    <string name="select_song_sort">选择歌曲排序</string>
    <string name="next_play">下一首播放</string>
    <string name="collection_to_list">收藏到歌单</string>
    <string name="download">下载</string>
    <string name="download_manager">下载管理</string>
    <string name="comment_count">评论(%1$d)</string>
    <string name="artist">歌手：%1$s</string>
    <string name="album">专辑：%1$s</string>
    <string name="delete">删除</string>
    <string name="song_detail">歌曲：%1$s</string>
    <string name="create_list">创建新歌单</string>
    <string name="list_manager">歌单管理</string>
    <string name="new_list">新建歌单</string>
    <string name="confirm">确定</string>
    <string name="enter_list_name">请输入歌单名称</string>
    <string name="list_create_susscess">歌单创建成功!</string>
    <string name="comment_create_susscess">评论发布成功!</string>
    <string name="cancel_list_collection_success">取消歌单收藏成功!</string>
    <string name="list_collection_success">歌单收藏成功!</string>
    <string name="song_like_success">歌曲收藏成功!</string>
    <string name="cancel_success">取消成功!</string>
    <string name="delete_success">删除成功!</string>
    <string name="already_downloaded">该歌曲已经下载了!</string>
    <string name="already_downloading">已经在下载列表中!</string>
    <string name="click_download">已暂停，点击继续下载</string>
    <string name="download_progress">%1$s/%2$s</string>
    <string name="download_add_complete">下载任务添加成功!</string>
    <string name="wait_download">等待下载</string>
    <string name="all_download">全部开始</string>
    <string name="all_pause">全部暂停</string>
    <string name="hint_comment">千言万语，汇成一句评论.</string>
    <string name="comment_list">评论列表</string>
    <string name="friend_list">好友列表</string>
    <string name="topic_list">话题列表</string>
    <string name="enter_comment_content">请输入评论内容.</string>
    <string name="enter_content">请输入内容.</string>
    <string name="reply_comment">回复%1$s:</string>
    <string name="reply_comment_show">\@%1$s:%2$s</string>
    <string name="enter_nickname">请输入用户昵称.</string>
    <string name="nickname_space">昵称不能包含空格.</string>
    <string name="join_count">%1$d人参与</string>
    <string name="user_detail">用户详情</string>
    <string name="topic_detail">话题详情</string>
    <string name="search">搜索</string>
    <string name="singer_category">歌手分类</string>
    <string name="video_created_at">发布：%1$s</string>
    <string name="video_clicks_count">播放：%1$d</string>
    <string name="publish_message">发动态</string>
    <string name="hint_message">请输入你想说的.</string>
    <string name="content_length_error">内容不能超过140字符.</string>
    <string name="upload_image_error">上传图片出错，请稍后再试!</string>
    <string name="my_friend">我的好友</string>
    <string name="my_message">我的消息</string>
    <string name="user_detail_count_info">关注 %1$d | 粉丝 %2$d</string>
    <string name="message_count_99">99+</string>
    <string name="list_detail">歌单详情</string>
</resources>
